--- a/_includes/components/header.html
+++ b/_includes/components/header.html
@@ -1,6 +1,14 @@
 <div id="main-header" class="main-header">
-{% include components/search_header.html %}
-{% include header_custom.html %}
+<div class="search" role="search">
+    <div class="search-input-wrap">
+        <input type="text" id="search-input" class="search-input" tabindex="0" placeholder="Search design﹢code"
+            aria-label="Search design﹢code" autocomplete="off">
+        <label width="24" height="24" for="search-input" class="search-label">
+            <span class="icon icon-search"></span>
+        </label>
+    </div>
+    <div id="search-results" class="search-results"></div>
+</div>
 {% if site.links %}
 <div class="aside-title">Links</div>
 {% for link in site.links %}
