--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -28,7 +28,7 @@
         <div class="icon icon-menu" aria-hidden="true"></div>
     </label>
     <aside>
-        {%- include components/sidebar.html -%}
+        {%- include components/aside.html -%}
     </aside>
     <main>
         <label for="toc"><div class="icon icon-toc" aria-label="Show Table of Contents"></div></label>
