--- a/_includes/components/script.html
+++ b/_includes/components/script.html
@@ -1,4 +1,8 @@
 
+<script src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
+<script src="{{js}}/jtd.js" async></script>
+
+
 <script src="{{js}}/script.js" async></script>
 <script>
 
@@ -337,7 +341,7 @@
 </script>
 -->
 
-
+<!--
 <script type="module" defer>
     import lunr from 'https://cdn.jsdelivr.net/npm/lunr@{{ site.version.lunr }}/+esm';
     document.addEventListener("DOMContentLoaded", async () => {
@@ -474,3 +478,4 @@
         searchHandler();
     });
 </script>
+-->
