--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -26,8 +26,8 @@
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
-    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for font_name in site.fonts %}
-    <link rel="preload" as="font" type="font/woff2" href="{{ font }}/{{ font_name }}.woff2">{% endfor %}
+    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for fnt in site.fonts %}
+    <link rel="preload" as="font" type="font/{{ fnt.extension }}" href="{{ font }}/{{ fnt.name }}-{{ fnt.weight }}.{{ fnt.extension }}">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
     {% for item in site.version %}{% if page[item.first] != false %}<link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ item.first }}@{{ item.last }}/+esm" as="script">{% endif %}{% endfor %}
     <link rel="dns-prefetch" href="https://translate.google.com">
@@ -37,6 +37,23 @@
     <link rel="canonical" href="{{ folder }}{{ page.url }}">
     <base href="{{folder}}/">
     <style>
+        {% for fnt in site.fonts %}@font-face {
+            font-family: '{{ font.name }}';
+            font-display: swap;
+            font-style: normal;
+            font-weight: {% if fnt.weight == "Regular" %}400{% elsif fnt.weight == "Medium" %}600{% else %}400{% endif %};
+            src: url('{{font}}/{{ fnt.name }}-{{ fnt.weight }}.{{ fnt.extension }}') format('{{ fnt.extension }}');
+        }{% endfor %}
+
+        :root {
+            --font-basic:
+            system-ui, -apple-system, blinkmacsystemfont, "Segoe UI", roboto,
+            "Helvetica Neue", arial, sans-serif, "Segoe UI Emoji";
+            --font-body: '{{ site.fonts.body.name }}';
+            --font-title: '{{ site.fonts.title.name }}';
+            --font-code: '{{ site.fonts.code.name }}';
+        }
+
         .language-mermaid {
             visibility: hidden;
         }
