--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -26,8 +26,8 @@
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
     <link rel="icon" type="image/x-icon" href="{{ icon }}">
-    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for fnt in site.fonts %}
-    <link rel="preload" as="font" type="font/{{ fnt.extension }}" href="{{ font }}/{{ fnt.name }}-{{ fnt.weight }}.{{ fnt.extension }}">{% endfor %}
+    <link rel="preload" type="text/css" href="{{css}}/style.css" as="style" onload="this.rel='stylesheet'">{% for fontface in site.fonts %}
+    <link rel="preload" as="font" type="font/{{ fontface.extension }}" href="{{ font }}{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}" crossorigin="anonymous">{% endfor %}
     <link rel="preload" as="script" href="{{js}}/script.js">
     {% for item in site.version %}{% if page[item.first] != false %}<link rel="preload" href="https://cdn.jsdelivr.net/npm/{{ item.first }}@{{ item.last }}/+esm" as="script">{% endif %}{% endfor %}
     <link rel="dns-prefetch" href="https://translate.google.com">
@@ -37,17 +37,13 @@
     <link rel="canonical" href="{{ folder }}{{ page.url }}">
     <base href="{{folder}}/">
     <style>
-
-{% for font in site.fonts %}
-@font-face {
-    font-family: '{{ font.name }}';
-    font-display: swap;
-    font-style: normal;
-    font-weight: {% if font.weight == "Regular" %}400{% elsif font.weight == "Medium" %}600{% else %}400{% endif %};
-    src: url('/assets/fonts/{{ font.name }}-{{ font.weight }}.{{ font.extension }}') format('{{ font.extension }}');
-}
-{% endfor %}
-
+        {% for fontface in site.fonts %}@font-face {
+            font-family: '{{ fontface.name }}';
+            font-display: swap;
+            font-style: normal;
+            font-weight: {% if fontface.weight == "Regular" %}400{% elsif fontface.weight == "Medium" %}600{% else %}400{% endif %};
+            src: url('{{ font }}/{{ fontface.name }}-{{ fontface.weight }}.{{ fontface.extension }}') format('{{ fontface.extension }}');
+        }{% endfor %}
 
 
         :root {
