--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -91,10 +91,12 @@
                 box-sizing: border-box
             }
 
-
-            :root {{% assign color_keys = site.colors | keys %}
-                {% for key in color_keys %}{% assign value = site.colors[key] %}--{{ key }}: #{{ value }};
-            {% endfor %}
+            :root {
+                {% assign color_keys = site.colors | keys %}
+                {% for key in color_keys %}
+                {% assign value = site.colors[key] %}
+                --{{ key }}: #{{ value }};
+                {% endfor %}
             }
 
         }
