--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -92,9 +92,9 @@
             }
 
             :root {
-                {% assign color_keys = site.colors | keys %}
-                {% for key in color_keys %}
-                {% assign value = site.colors[key] %}
+                {% for color in site.colors %}
+                {% assign key = color | keys | first %}
+                {% assign value = color[key] %}
                 --{{ key }}: #{{ value }};
                 {% endfor %}
             }
